...
            "state": "translated",
            "value": "初始化默认标签失败，请重启应用重试。"
          }
        }
      }
    },
    "删除": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete"
...
            "state": "translated",
            "value": "好"
          }
        }
      }
    },
    "好的": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "OK"
...
            "state": "translated",
            "value": "年度心情热力图"
          }
        }
      }
    },
    "彻底删除": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete Permanently"
...
            "state": "translated",
            "value": "解锁无限日记、无限照片、无限标签，随时随地记录每一个时刻"
          }
        }
      }
    },
    "设置": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
...
